# gloc

./: .gitignore  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  Doxyfile  README.md  \  gmon.out  setup.py.in  tester.org
apps/: CMakeLists.txt  cubviewer.cc
apps/gloria/: CMakeLists.txt  Makefile  cubviewer.cc  scratch.cc  template.cpp
apps/ocvapp/: CMakeLists.txt
bench/: CMakeLists.txt  cub_perf.cc
cython/: setup.py
data/: 20120913_135249.lxa
glopy/: CMakeLists.txt
glopy/lib/: CMakeLists.txt  gloc_wrapper.pyx
include/: Timer.hpp  logging.hpp
include/gloc/: channel.hpp  cuboid.hpp  gloc  gloriafile.hpp  laserxa.hpp  math.hpp  matrix.hpp  parallel.hpp  resample.hpp  wavefilt.hpp  wavelet.hpp
python/: CMakeLists.txt
python/gloc/: CMakeLists.txt  array.cpp  calibration.cpp  gloripex.cpp  greet.cpp  nosetests.xml  numpy.hpp  spikehandling.hpp  stats.cpp  stats.hpp  vect.cpp
python/gloc.egg-info/: PKG-INFO  SOURCES.txt
python/gloc/lib/: CMakeLists.txt  gloc_wrapper.pyx
python/gloc/tests/: test_gloripex.py  test_var.py
python/gloripex/: array.hpp  calibration.hpp  gloripex.cpp  mathutil.cpp  mathutil.hpp  spikehandling.cpp
scratch/: template_tests.org
src/: CMakeLists.txt  IterativeLevel0.cpp  IterativeLevel0.hpp  Resampler.cpp  Resampler.h  main.cc  printlst.cpp
test/: CMakeLists.txt  channel_check.cc  fileio_check.cc  iteratorl0_check.cc  math_check.cc  matrix_check.cc  sanity_check.cc  wavelet_check.cc
tools/share/cmake/: FindNumpy.cmake  boost-python.cmake  cython_test.cpp
